added left-side tabs (not fully operational)

--- a/index.html
+++ b/index.html
@@ -43,14 +43,32 @@
         </div>
       </div>
     </nav>
-
+<!--http://www.bootply.com/74926#-->
     <div class="container content">
-
-      <div class="starter-template">
-        <h1>My name is Peyton Tiroff, and I make things</h1>
-        <p class="lead"> Digitally, usually</p>
-      </div>
-
+        <div class="row">
+          <div class="col-md-6">
+            <!-- tabs left -->
+            <div class="tabbable tabs-left">
+              <ul class="nav nav-tabs">
+                <li><a href="#a" data-toggle="tab">One</a></li>
+                <li class="active"><a href="#b" data-toggle="tab">Two</a></li>
+                <li><a href="#c" data-toggle="tab">Twee</a></li>
+              </ul>
+              <div class="tab-content">
+               <div class="tab-pane active" id="a">
+                <div class="starter-template">
+                      <h1>My name is Peyton Tiroff, and I make things</h1>
+                     <p class="lead"> Digitally, usually</p>
+              </div>
+               <div class="tab-pane" id="b">Secondo sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
+               Aliquam in felis sit amet augue.</div>
+               <div class="tab-pane" id="c">Thirdamuno, ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
+               Quisque mauris augue, molestie tincidunt condimentum vitae. </div>
+              </div>
+            </div>
+            <!-- /tabs -->
+          </div>
+        </div><!-- /row -->
     </div>
 
 
