linked bootstrap js properly, cannot figure out grid system

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       </div>
     </nav>
 <!--http://www.bootply.com/74926#-->
-    <div class="container content">
+    <div class="container-fluid content">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-lg-12">
             <!-- tabs left -->
             <div class="tabbable tabs-left">
               <ul class="nav nav-tabs">
@@ -54,19 +54,37 @@
                 <li class="active"><a href="#b" data-toggle="tab">Two</a></li>
                 <li><a href="#c" data-toggle="tab">Twee</a></li>
               </ul>
+              <div class="col-xs-6">
               <div class="tab-content">
                <div class="tab-pane active" id="a">
-                <div class="starter-template">
-                      <h1>My name is Peyton Tiroff, and I make things</h1>
-                     <p class="lead"> Digitally, usually</p>
+                   <div class="row">
+                      <div id="landing-content-header" class="col-xs-8">
+                            <h1>My name is Peyton Tiroff, and I make things</h1>
+                           <p > Digitally, usually</p>
+                      </div>
+                      <div id="Peytons-headshot" class="col-xs-2">
+                        <img src="http://placehold.it/140x140" alt="This is a picture of Peyton" class="img-circle">
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div id="intro-text" class="">
+                        <p>
+                         Inspect anything brought into the house. Mark territory pee in human's bed until he cleans the litter box. Scratch leg; meow for can opener to feed me eat a plant, kill a hand lick the other cats.
+                        </p>
+                      </div>
+                      <div id="activity">
+                        <h3> This is my activity on FaceStaHub </h3>
+                        <img src="http://placehold.it/500x500" alt="This is a picture of Peyton" class="img-rounded">
+                      </div>
+                  </div>
               </div>
                <div class="tab-pane" id="b">Secondo sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
                Aliquam in felis sit amet augue.</div>
                <div class="tab-pane" id="c">Thirdamuno, ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
                Quisque mauris augue, molestie tincidunt condimentum vitae. </div>
               </div>
-            </div>
-            <!-- /tabs -->
+              </div> <!-- close div of content to right of tab-->
+            </div><!-- /tabs -->
           </div>
         </div><!-- /row -->
     </div>
@@ -77,8 +95,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="static/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
