Html wireframe done, grid system still needs work

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <!-- tabs left -->
             <div class="tabbable tabs-left">
               <ul class="nav nav-tabs">
-                <li><a href="#a" data-toggle="tab">One</a></li>
-                <li class="active"><a href="#b" data-toggle="tab">Two</a></li>
+                <li class="active"><a href="#a" data-toggle="tab">One</a></li>
+                <li ><a href="#b" data-toggle="tab">Two</a></li>
                 <li><a href="#c" data-toggle="tab">Twee</a></li>
               </ul>
               <div class="col-xs-6">
@@ -62,8 +62,8 @@
                             <h1>My name is Peyton Tiroff, and I make things</h1>
                            <p > Digitally, usually</p>
                       </div>
-                      <div id="Peytons-headshot" class="col-xs-2">
-                        <img src="http://placehold.it/140x140" alt="This is a picture of Peyton" class="img-circle">
+                      <div id="Peytons-headshot" class="col-xs-2"> <!-- I want this to be right on large and float up above intro on small-->
+                        <img src="http://placehold.it/140x140" title="This is a picture of Peyton" class="img-circle">
                       </div>
                   </div>
                   <div class="row">
@@ -74,14 +74,97 @@
                       </div>
                       <div id="activity">
                         <h3> This is my activity on FaceStaHub </h3>
-                        <img src="http://placehold.it/500x500" alt="This is a picture of Peyton" class="img-rounded">
+                        <img src="http://placehold.it/500x500" title="This probably won't be an image but some sort of embeded widget" class="img-rounded">
                       </div>
                   </div>
               </div>
-               <div class="tab-pane" id="b">Secondo sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
-               Aliquam in felis sit amet augue.</div>
-               <div class="tab-pane" id="c">Thirdamuno, ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
-               Quisque mauris augue, molestie tincidunt condimentum vitae. </div>
+               <div class="tab-pane" id="b">
+               <div class="col-xs-12">
+                <h3> This is a thing I did I'd like to share </h3>
+               </div>
+                 <div class="row">
+                  <div class="col-xs-8">
+                    <p>
+                      If it smells like fish eat as much as you wish. Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff pelt around the house and up and down stairs chasing phantoms or meowing non stop for food for walk on car leaving trail of paw prints on hood and windshield or slap owner's face at 5am until human fills food dish where is my slave? I'm getting hungry, so plan steps for world domination. Lick the other cats jump around on couch, meow constantly until given food, .
+                    </p>
+                  </div>
+                  <div class="col-xs-4">
+                    <div class="row">
+                      <div class="col-xs-12">
+                        <img src="http://placehold.it/140x140" title="This is a picture of  a project">
+                      </div>
+                      <div class="col-xs-12">
+                        <img src="http://placehold.it/140x140" title="This is a picture of a project "> <!--want to add more space to these, maybe make into verticle carousel/rotating image belt-->
+                      </div>
+                      <div class="col-xs-12">
+                        <img src="http://placehold.it/140x140" title="This is a picture of a project ">
+                      </div>
+                    </div>
+                  </div>
+                 </div>
+                 <div class="row">
+                  <div class="col-xs-12">
+                    <img src="http://placehold.it/500x240" title="Either a widget or demonstration of project, else maybe just larger version of a photo selected from the right sidebar">
+                  </div>
+                 </div>
+               </div>
+               <div class="tab-pane" id="c">
+                <div class="col-xs-12">
+                  <h2>Thoughts on things</h2>
+                  <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                      <div class="thumbnail">
+                        <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?">
+                          <div class="caption">
+                            <h4>This Is My Title To Pull You In</h4>
+                              <p>Exposition! Read All About It!</p>
+                              <p><a href="#" class="btn btn-default" role="button">More</a></p>
+                          </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                      <div class="thumbnail">
+                        <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?">
+                          <div class="caption">
+                            <h4>Maybe some will just be links to pieces I like</h4>
+                              <p>I mean I'm not going to say whats been said better</p>
+                              <p><a href="#" class="btn btn-default" role="button">More</a></p>
+                          </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                      <div class="thumbnail">
+                        <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?">
+                          <div class="caption">
+                            <h4>Maybe my idea stubs and to-dos could go here</h4>
+                              <p>I've always got things I want to do</p>
+                              <p><a href="#" class="btn btn-default" role="button">More</a></p>
+                          </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                      <div class="thumbnail">
+                        <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?">
+                          <div class="caption">
+                            <h4>Or just non-code non-tech stuff goes here</h4>
+                              <p>I could use the encouragement to do more outside of my degreer</p>
+                              <p><a href="#" class="btn btn-default" role="button">More</a></p>
+                          </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                      <div class="thumbnail">
+                        <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?">
+                          <div class="caption">
+                            <h4>Also make this into a scrolling carousel?</h4>
+                              <p>There's a good chance of this filling up very quickly</p> <!-- is there any way of getting this all to float up and smush together?-->
+                              <p><a href="#" class="btn btn-default" role="button">More</a></p>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                </div>
               </div>
               </div> <!-- close div of content to right of tab-->
             </div><!-- /tabs -->
