--- a/index.html
+++ b/index.html
@@ -1,194 +1,91 @@
-<!--
-
-This is a great start. Some thoughts / suggestions
-
-[1] Where you are trying to get certain columns to behave different based on screen size, you'll need to manipulate the 'col-' classes to inform them how to behave. In your case for the circular image, you'll actually want it to appear before the "My name is..." and then use floats to pull it to the right on larger screens.
-
-[2] Take a look at the 'img-responsive' class in Bootstrap to make sure your images are responsive and do not cause overlap or overflow as you scale down the screen.
-
-[3] The majority of your content is contained within a 'col-xs-6', which is causing it to be quite narrow. Given the responsive nature of the web, it would make sense to allow your content to occupy more space horizontally, and perhaps centering everything on the page would balance out that space. I have posted some resources about 'Box Model' and 'CSS Positioning' that will help you manipulate those sorts of things.
-
--->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="#"> <!--TODO-->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="#"> <!--TODO-->
 
-    <title>Peyton Tiroff</title>
+  <title>Peyton Tiroff</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="static/starter-template.css" rel="stylesheet">
+  <link href="static/starter-template.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+      <![endif]-->
+    </head>
 
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Peyton Tiroff</a>
+    <body>
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="nav-container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Peyton Tiroff</a> <!-- I want to get this brand label to adjust width to match the tabs, and have the other three parts of the tab align to the right-->
+            <!-- actually, might even get rid of this and just go with the sole left-hand tab navigation. Maybe I'll copy the collapse feature as well to keep the page from needing to scroll vertically/make it work for mobile/small screens-->
+          </div>
+          <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li ><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li ><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
+      </nav>
+      <!--http://www.bootply.com/74926#-->
+      <div class="container-fluid">
+        <div class="row">  <!--main row of page-->
+          <div class="col-xs-12 col-sm-1 tabs-left"> <!-- column containing tabs-->
+            <ul class="nav nav-tabs"> <!-- one idea to keep the number of tabs on this side low - have higher-level catgories that, when clicked on, get pinned to the top and subcategory tabs appear below-->
+             <li class="active"><a href="#">This Is Peyton</a></li>
+             <li ><a href="SingleProjectPage.html">My Big Project</a></li>
+             <li><a href="MultiItemPage.html">Odds &amp; Ends</a></li>
+           </ul>
+         </div>
+         <div class="col-xs-12 col-sm-11 tab-content"> <!-- Column containing content of tab-->
+           <div class="row">
+            <div id="Peytons-headshot" class="col-xs-12 col-lg-2 pull-right"> <!-- Image dissapears on small screens, can't get to center-->
+              <img src="http://placehold.it/200x200" title="This is a picture of Peyton" class="img-responsive img-circle left-block">
+            </div>
+            <!-- <div id="landing-content-text" class="col-xs-12 col-lg-10"> -->
+            <div id="intro-header" class="col-xs-12 col-lg-10 text-right"> <!-- is there some way to get this to align vertically with the image?-->
+              <h1>My name is Peyton Tiroff, and I make things</h1>
+              <p > Digitally, usually</p>
+            </div>
+            <div id="intro-text" class="col-xs-12  text-center">
+             <p class="text-center">
+               Inspect anything brought into the house. Mark territory pee in human's bed until he cleans the litter box. Scratch leg; meow for can opener to feed me eat a plant, kill a hand lick the other cats.
+             </p>
+             <h4>This here is something that is attention-grabbing and maybe a bit of impressive  coding as well</h4>
+             <img src="http://placehold.it/1000x500" title="Some attention grabbing piece of code trickery" class="img-rounded img-responsive center-block">
+           </div>
+           <div class="row">
+             <div id="activity" class="col-lg-12 text-center">
+              <h3> This is my activity on FaceStaHub </h3> <!-- this title jumps up to above the first text on small screens, along with circle picture appearing-->
+              <img src="http://placehold.it/500x250" title="This probably won't be an image but some sort of embeded widget" class="img-rounded img-responsive center-block">
+            </div>
+          </div>
+          <!-- </div> -->
         </div>
       </div>
-    </nav>
-<!--http://www.bootply.com/74926#-->
-    <div class="container-fluid content">
-        <div class="row">
-          <div class="col-lg-12">
-            <!-- tabs left -->
-            <div class="tabbable tabs-left">
-              <ul class="nav nav-tabs">
-                <li class="active"><a href="#a" data-toggle="tab">One</a></li>
-                <li ><a href="#b" data-toggle="tab">Two</a></li>
-                <li><a href="#c" data-toggle="tab">Twee</a></li>
-              </ul>
-              <div class="col-md-12"><!-- this was a problem, currently contains all tab content-->
-              <div class="tab-content">
-               <div class="tab-pane active" id="a">
-                   <div class="row">
-                      <div id="landing-content-header" class="col-md-8">
-                            <h1>My name is Peyton Tiroff, and I make things</h1>
-                           <p > Digitally, usually</p>
-                      </div>
-                      <div id="Peytons-headshot" class="col-md-2"> <!-- I want this to be right on large and float up above intro on small-->
-                        <img src="http://placehold.it/140x140" title="This is a picture of Peyton" class="img-circle">
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div id="intro-text" class="">
-                        <p>
-                         Inspect anything brought into the house. Mark territory pee in human's bed until he cleans the litter box. Scratch leg; meow for can opener to feed me eat a plant, kill a hand lick the other cats.
-                        </p>
-                      </div>
-                      <div id="activity">
-                        <h3> This is my activity on FaceStaHub </h3>
-                        <img src="http://placehold.it/500x500" title="This probably won't be an image but some sort of embeded widget" class="img-rounded">
-                      </div>
-                  </div>
-              </div>
-               <div class="tab-pane" id="b">
-               <div class="col-md-12">
-                <h3> This is a thing I did I'd like to share </h3>
-               </div>
-                 <div class="row">
-                  <div class="col-md-8">
-                    <p>
-                      If it smells like fish eat as much as you wish. Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff pelt around the house and up and down stairs chasing phantoms or meowing non stop for food for walk on car leaving trail of paw prints on hood and windshield or slap owner's face at 5am until human fills food dish where is my slave? I'm getting hungry, so plan steps for world domination. Lick the other cats jump around on couch, meow constantly until given food, .
-                    </p>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="row">
-                      <div class="col-md-12">
-                        <img src="http://placehold.it/140x140" title="This is a picture of  a project">
-                      </div>
-                      <div class="col-md-12">
-                        <img src="http://placehold.it/140x140" title="This is a picture of a project "> <!--want to add more space to these, maybe make into verticle carousel/rotating image belt-->
-                      </div>
-                      <div class="col-md-12">
-                        <img src="http://placehold.it/140x140" title="This is a picture of a project ">
-                      </div>
-                    </div>
-                  </div>
-                 </div>
-                 <div class="row">
-                  <div class="col-md-12">
-                    <img src="http://placehold.it/500x240" title="Either a widget or demonstration of project, else maybe just larger version of a photo selected from the right sidebar">
-                  </div>
-                 </div>
-               </div>
-               <div class="tab-pane" id="c">
-                <div class="col-md-12">
-                  <h2>Thoughts on things</h2>
-                  <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                      <div class="thumbnail">
-                        <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?">
-                          <div class="caption">
-                            <h4>This Is My Title To Pull You In</h4>
-                              <p>Exposition! Read All About It!</p>
-                              <p><a href="#" class="btn btn-default" role="button">More</a></p>
-                          </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                      <div class="thumbnail">
-                        <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?">
-                          <div class="caption">
-                            <h4>Maybe some will just be links to pieces I like</h4>
-                              <p>I mean I'm not going to say whats been said better</p>
-                              <p><a href="#" class="btn btn-default" role="button">More</a></p>
-                          </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                      <div class="thumbnail">
-                        <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?">
-                          <div class="caption">
-                            <h4>Maybe my idea stubs and to-dos could go here</h4>
-                              <p>I've always got things I want to do</p>
-                              <p><a href="#" class="btn btn-default" role="button">More</a></p>
-                          </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                      <div class="thumbnail">
-                        <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?">
-                          <div class="caption">
-                            <h4>Or just non-code non-tech stuff goes here</h4>
-                              <p>I could use the encouragement to do more outside of my degreer</p>
-                              <p><a href="#" class="btn btn-default" role="button">More</a></p>
-                          </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                      <div class="thumbnail">
-                        <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?">
-                          <div class="caption">
-                            <h4>Also make this into a scrolling carousel?</h4>
-                              <p>There's a good chance of this filling up very quickly</p> <!-- is there any way of getting this all to float up and smush together?-->
-                              <p><a href="#" class="btn btn-default" role="button">More</a></p>
-                          </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                </div>
-              </div>
-              </div> <!-- close div of content to right of tab-->
-            </div><!-- /tabs -->
-          </div>
-        </div><!-- /row -->
-    </div>
-
-
+    </div> <!--Close of main row-->
+  </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
   </body>
-</html>
+  </html>
