--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
+<!--
+
+This is a nice improvement over last week's version. Good to see you have some more control over your content and are still able to keep that 'tabbed' effect you were looking for
+
+Now that you've got your layout here, start thinking about what real content you'll want to include. As you start putting that in there, you'll be able to style for your site's content rather than placeholders
+
+With the way you've set this up, I think it would be cool to explore using solely the left sidebar as your navigation rather than both (as you alluded to in your notes). I find this to be an interesting treatment, and one not so often done. The way you are handling the tabs on mobile works nicely as well, and with some styles (perhaps a fixed position), they could be really slick
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="#"> <!--TODO-->
+  <link rel="shortcut icon" href="favicon.ico" />
 
   <title>Peyton Tiroff</title>
 
@@ -32,12 +43,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Peyton Tiroff</a> <!-- I want to get this brand label to adjust width to match the tabs, and have the other three parts of the tab align to the right-->
+            <a class="navbar-brand" href="#">Peyton Tiroff</a>
+            <!-- I want to get this brand label to adjust width to match the tabs, and have the other three parts of the tab align to the right-->
             <!-- actually, might even get rid of this and just go with the sole left-hand tab navigation. Maybe I'll copy the collapse feature as well to keep the page from needing to scroll vertically/make it work for mobile/small screens-->
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li ><a href="#">Home</a></li>
+              <li><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
@@ -46,46 +58,59 @@
       </nav>
       <!--http://www.bootply.com/74926#-->
       <div class="container-fluid">
-        <div class="row">  <!--main row of page-->
-          <div class="col-xs-12 col-sm-1 tabs-left"> <!-- column containing tabs-->
-            <ul class="nav nav-tabs"> <!-- one idea to keep the number of tabs on this side low - have higher-level catgories that, when clicked on, get pinned to the top and subcategory tabs appear below-->
-             <li class="active"><a href="#">This Is Peyton</a></li>
-             <li ><a href="SingleProjectPage.html">My Big Project</a></li>
-             <li><a href="MultiItemPage.html">Odds &amp; Ends</a></li>
-           </ul>
-         </div>
-         <div class="col-xs-12 col-sm-11 tab-content"> <!-- Column containing content of tab-->
-           <div class="row">
-            <div id="Peytons-headshot" class="col-xs-12 col-lg-2 pull-right"> <!-- Image dissapears on small screens, can't get to center-->
-              <img src="http://placehold.it/200x200" title="This is a picture of Peyton" class="img-responsive img-circle left-block">
-            </div>
-            <!-- <div id="landing-content-text" class="col-xs-12 col-lg-10"> -->
-            <div id="intro-header" class="col-xs-12 col-lg-10 text-right"> <!-- is there some way to get this to align vertically with the image?-->
-              <h1>My name is Peyton Tiroff, and I make things</h1>
-              <p > Digitally, usually</p>
-            </div>
-            <div id="intro-text" class="col-xs-12  text-center">
-             <p class="text-center">
-               Inspect anything brought into the house. Mark territory pee in human's bed until he cleans the litter box. Scratch leg; meow for can opener to feed me eat a plant, kill a hand lick the other cats.
-             </p>
-             <h4>This here is something that is attention-grabbing and maybe a bit of impressive  coding as well</h4>
-             <img src="http://placehold.it/1000x500" title="Some attention grabbing piece of code trickery" class="img-rounded img-responsive center-block">
-           </div>
-           <div class="row">
-             <div id="activity" class="col-lg-12 text-center">
-              <h3> This is my activity on FaceStaHub </h3> <!-- this title jumps up to above the first text on small screens, along with circle picture appearing-->
-              <img src="http://placehold.it/500x250" title="This probably won't be an image but some sort of embeded widget" class="img-rounded img-responsive center-block">
+        <div class="row">
+          <!--main row of page-->
+          <div class="col-xs-12 col-sm-1 tabs-left">
+            <!-- column containing tabs-->
+            <ul class="nav nav-tabs">
+              <!-- one idea to keep the number of tabs on this side low - have higher-level catgories that, when clicked on, get pinned to the top and subcategory tabs appear below-->
+              <li class="active"><a href="#">This Is Peyton</a></li>
+              <li><a href="SingleProjectPage.html">My Big Project</a></li>
+              <li><a href="MultiItemPage.html">Odds &amp; Ends</a></li>
+            </ul>
+          </div>
+          <div class="col-xs-12 col-sm-11 tab-content">
+            <!-- Column containing content of tab-->
+            <div class="row">
+              <div id="Peytons-headshot" class="col-xs-12 col-lg-2 pull-right">
+                <!-- Image dissapears on small screens, can't get to center-->
+                <!-- Looks to me like the image stays for all screens, so maybe you fixed this. As for centering it, try using the 'center-block' instead of 'left-block' class like you did for the image below -->
+                <img src="http://placehold.it/200x200" title="This is a picture of Peyton" class="img-responsive img-circle left-block">
+              </div>
+              <!-- <div id="landing-content-text" class="col-xs-12 col-lg-10"> -->
+              <div id="intro-header" class="col-xs-12 col-lg-10 text-right">
+                <!-- is there some way to get this to align vertically with the image?-->
+                <!-- The easiest way is going to be to apply a top margin or padding to the text column, but not the image one. A more difficult method would be with Flexbox, which is quite powerful for controlling layouts, though has a steeper learning curve -->
+                <h1>My name is Peyton Tiroff, and I make things</h1>
+                <p> Digitally, usually</p>
+              </div>
+              <div id="intro-text" class="col-xs-12  text-center">
+                <p class="text-center">
+                  Inspect anything brought into the house. Mark territory pee in human's bed until he cleans the litter box. Scratch leg; meow for can opener to feed me eat a plant, kill a hand lick the other cats.
+                </p>
+                <h4>This here is something that is attention-grabbing and maybe a bit of impressive  coding as well</h4>
+                <img src="http://placehold.it/1000x500" title="Some attention grabbing piece of code trickery" class="img-rounded img-responsive center-block">
+              </div>
+              <div class="row">
+                <div id="activity" class="col-lg-12 text-center">
+                  <h3> This is my activity on FaceStaHub </h3>
+                  <!-- this title jumps up to above the first text on small screens, along with circle picture appearing-->
+                  <img src="http://placehold.it/500x250" title="This probably won't be an image but some sort of embeded widget" class="img-rounded img-responsive center-block">
+                </div>
+              </div>
+              <!-- </div> -->
             </div>
           </div>
-          <!-- </div> -->
         </div>
+        <!--Close of main row-->
       </div>
-    </div> <!--Close of main row-->
-  </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script>
+      window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
+    </script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
   </body>
+
   </html>
