--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -13,7 +13,7 @@
   <!-- Bootstrap core CSS -->
   <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <link href="static/starter-template.css" rel="stylesheet">
+  <link href="static/styles.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
